--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "knex": "^0.95.4",
+    "sqlite3": "^5.0.2",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
