--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:seed": "knex --knexfile knexfile.ts seed:run"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.95.4",
     "sqlite3": "^5.0.2",
@@ -19,6 +22,7 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11"
   }
 }
